--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "video-background",
+  "private": true,
   "version": "2.7.5",
   "description": "This GitHub repo is for the development of the Video Background WordPress plugin. If you are looking to download the production version, you can find it on the WordPress Plugin Repo",
   "main": "candide-vidbg.php",
